# economist

./: .env  .gitignore  Cargo.toml  README.md  logo.png.kra  sqlx-data.json
.github/workflows/: rust.yml
migrations/: 20230501102232_init.down.sql  20230501102232_init.up.sql  20230501135932_Add_'initiator'_field_for_tracking.down.sql  20230501135932_Add_'initiator'_field_for_tracking.up.sql
src/: main.rs
src/commands/: currency.rs  manage.rs  meta.rs  mod.rs  ping.rs  query.rs  version.rs
src/handlers/: boilerplate.rs  circulation.rs  create.rs  database.rs  delete.rs  list.rs  mod.rs  modify.rs  records.rs  reserve.rs  view.rs
src/types/: mod.rs
src/utils/: mod.rs
src/workers/: records.rs
