[package]
name = "economist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
git-version = "0.3.5"
lazy_static = "1.4.0"
rustc_version = "0.4.0"
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
sqlx = { version = "0.6.3", features = ["mysql", "chrono", "uuid", "tls", "runtime-tokio-rustls"] }
tokio = { version = "1.28.0", features = ["full"] }
uuid = "1.3.1"
