[package]
build = "src/build.rs"
name = "economist"
version = "0.1.9"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
built = { version = "0.5", features = ["git2", "semver", "chrono"] }

[dependencies]
dotenvy = "0.15.7"
futures = "0.3.28"
git-version = "0.3.5"
lazy_static = "1.4.0"
rustc_version = "0.4.0"
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
sqlx = { version = "0.6.3", features = ["mysql", "chrono", "uuid", "tls", "runtime-tokio-native-tls", "offline", "any", "postgres"] }
tokio = "1.28.0"
uuid = "1.3.1"
shuttle-runtime = "0.15.0"
anyhow = "1.0.70"
shuttle-serenity = "0.15.0"
shuttle-secrets = "0.15.0"
tracing = "0.1.37"
chrono = "0.4.24"
shuttle-shared-db = { version = "0.15.0", features = ["postgres", "sqlx"] }
