[package]
build = "src/build.rs"
name = "economist"
version = "0.3.1"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
built = { version = "0.5", features = ["git2", "semver", "chrono"] }

[dependencies]
dotenvy = "0.15.7"
futures = "0.3.28"
git-version = "0.3.5"
rustc_version = "0.4.0"
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
sqlx = { version = "0.6.3", features = ["mysql", "chrono", "uuid", "tls", "runtime-tokio-native-tls", "offline", "any", "postgres"] }
tokio = "1.28.0"
shuttle-runtime = "0.15.0"
shuttle-serenity = "0.15.0"
shuttle-secrets = "0.15.0"
tracing = "0.1.37"
chrono = "0.4.24"
shuttle-shared-db = { version = "0.15.0", features = ["postgres", "sqlx"] }
shuttle-persist = "0.15.0"
reqwest = { version = "0.11.17", features = ["stream", "multipart"] }
plotters = "0.3.4"
async-trait = "0.1.68"
anyhow = "1.0.71"
